update a tweet with ajax

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,8 @@
 <div class="container">
-  <form class="tweetfind">
-    <input type="text" placeholder="@username" name="username">
-    <input type="submit" value="View Tweets">
+  <p>Write a tweet</p>
+  <form class="tweettext">
+    <input type="text" placeholder="chirp-chirp" name="tweet">
+    <input type="submit" value="Send Tweets">
   </form>
+
 </div>
